[tool.poetry]
name = "roy-n-roy.github.io"
version = "1.0.0"
description = "roy-n-roy's memo docs"
authors = ["Roy. <royroy.euph@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs-material = {git = "https://github.com/roy-n-roy/mkdocs-material.git", rev = "edit"}
mkdocs-git-revision-date-localized-plugin = "^1.1"
mkdocs-minify-plugin = "^0.5.0"

[tool.poetry.dev-dependencies]
aiohttp = {extras = ["speedups"], version = "^3.8.1"}
autopep8 = "^1.6.0"
beautifulsoup4 = "^4.11.1"
flake8 = "^4.0.1"
lxml = "^4.9.1"
pytest = "^7.1"
requests = "^2.28.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
