[tool.poetry]
name = "roy-n-roy.github.io"
version = "1.0.0"
description = "roy-n-roy's memo docs"
authors = ["Roy. <royroy.euph@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs-material = {git = "https://github.com/roy-n-roy/mkdocs-material.git", rev = "edit"}
mkdocs-git-revision-date-localized-plugin = "^1.1"
mkdocs-minify-plugin = "^0.6.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
