[tool.poetry]
name = "roy-n-roy.github.io"
version = "1.0.0"
description = "roy-n-roy's memo docs"
authors = ["Roy. <royroy.euph@gmail.com>"]
homepage = "https://roy-n-roy.nyan-co.page/"

[tool.poetry.dependencies]
python = "~3.8"
mkdocs-material = {git = "https://github.com/roy-n-roy/mkdocs-material.git", rev = "edit"}
mkdocs-git-revision-date-localized-plugin = "^1.2"
mkdocs-minify-plugin = "^0.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
